--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ms+Madi&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-      <script src="script.js"></script>
-      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <div id='block'>Please turn your phone to landscape!</div>
-   <h2 id='pretext'>to my wonderful girlfriend</h2>
-   <h1 id='title'>time since we've started dating</h1>
-   <ul>
-      <li><span id='years'>0</span>Years</li>
-      <li><span id='months'>0</span>Months</li>
-      <li><span id='days'>0</span>Days</li>
-      <li><span id='hours'>0</span>Hours</li>
-      <li><span id='minutes'>0</span>Minutes</li>
-      <li><span id='seconds'>0</span>Seconds</li>
-   </ul>
-   <h1 id='name'>relationship achievement</h1>
-   <p id='description'>I want to thank you, and congraulate you on being such an amazing and wonderful girlfriend. My life has only been improving since I've started dating you. I can't wait to see where the future will take us both.</p>
+   <div id='container'>
+      <h2 id='pretext'>to my wonderful girlfriend</h2>
+      <h1 id='title'>time since we've started dating</h1>
+      <ul>
+         <li><span id='years'></span>Years</li>
+         <li><span id='months'></span>Months</li>
+         <li><span id='days'></span>Days</li>
+         <li><span id='hours'></span>Hours</li>
+         <li><span id='minutes'></span>Minutes</li>
+         <li><span id='seconds'></span>Seconds</li>
+      </ul>
+      <h1 id='name'>relationship achievement</h1>
+      <p id='description'>I want to thank you, and congraulate you on being such an amazing and wonderful girlfriend. My life has only been improving since I've started dating you. I can't wait to see where the future will take us both.</p>
+   </div>
 </html>
