--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ms+Madi&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <script src="script.js"></script>
    </head>
    <div id='block'>Please turn your phone to landscape!</div>
    <div id='container'>
